--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
 
                 <div class="text-center">
-                    <p class="pre-wrap lead">We are a passionate startup company,<br/>hat develops mobile games for everyone<br/>in the world to play.</p>
+                    <p class="pre-wrap lead">We are a passionate startup company,<br/>that develops mobile games for everyone<br/>in the world to play.</p>
                 </div>
             </div>
         </section>
