--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
 
                 <div class="text-center">
-                    <p class="pre-wrap lead">We are a passionate startup company,<br/>that develops mobile games for everyone<br/>in the world to play.</p>
+                    <p class="pre-wrap lead">We are a passionate startup company,<br/>hat develops mobile games for everyone<br/>in the world to play.</p>
                 </div>
             </div>
         </section>
@@ -78,15 +78,14 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-4">
                         <div class="d-flex flex-column align-items-center">
-                            <div class="icon-contact mb-3"><i class="fas fa-mobile-alt"></i></div>
-                            <div class="text-white">Phone</div>
-                            <div class="lead font-weight-bold text-white">(+90) 545 852-9996</div>
+                            <div class="icon-contact mb-3"><i class="far fa-envelope"></i></div>
+                            <div class="text-white">Email</div><a class="lead font-weight-bold text-white" href="mailto:akinkursatozkan@scrollnext.games">akinkursatozkan@scrollnext.games</a>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="d-flex flex-column align-items-center">
                             <div class="icon-contact mb-3"><i class="far fa-envelope"></i></div>
-                            <div class="text-white">Email</div><a class="lead font-weight-bold text-white" href="mailto:akinkursatozkan@gmail.com">akinkursatozkan@gmail.com</a>
+                            <div class="text-white">Email</div><a class="lead font-weight-bold text-white" href="mailto:berkaycit@scrollnext.games">berkaycit@scrollnext.games</a>
                         </div>
                     </div>
                 </div>
