--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
 
                 <div class="text-center">
-                    <p class="pre-wrap lead">We are a passionate startup company,<br/>that develops mobile games for everyone<br/>in the world to play.</p>
+                    <p class="pre-wrap lead">We are a passionate startup company,<br/>that develops mobile games for everyone<br/>in the world.</p>
                 </div>
             </div>
         </section>
@@ -113,7 +113,7 @@
         </footer>
         <!-- Copyright Section-->
         <section class="copyright py-4 text-center text-white">
-            <div class="container"><small class="pre-wrap">Copyright © ScrollNext 2021 </small></div>
+            <div class="container"><small class="pre-wrap">Copyright © ScrollNext 2022 </small></div>
         </section>
         <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)-->
         <div class="scroll-to-top d-lg-none position-fixed"><a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top"><i class="fa fa-chevron-up"></i></a></div>
